<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="capstone.project.qrnav.MainActivity">
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="6"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_locations"
        android:orderInCategory="5"
        android:title="@string/action_locations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_source"
        android:orderInCategory="4"
        android:title="@string/action_source"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_speak"
        android:title="@string/action_speak"
        android:orderInCategory="3"
        android:checkable="true" />
    <item
        android:id="@+id/action_vibration"
        android:title="@string/action_vibration"
        android:orderInCategory="2"
        android:checkable="true" />
    <item
        android:id="@+id/action_units"
        android:title="@string/action_units"
        android:orderInCategory="1"
        android:checkable="true" />
    <item
        android:id="@+id/action_escalator"
        android:title="@string/action_escalator"
        android:orderInCategory="0"
        android:checkable="true" />
</menu>
